<?xml version="1.0"?>
<package>
  <name>dynamic_objects</name>
  <version>0.0.0</version>
  <description>The dynamic_objects package</description>

  <maintainer email="d.d.tananaev@gmail.com">denis</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <run_depend>geometry_msgs</run_depend>
<build_depend>cmake_modules</build_depend>

  <export>

  </export>
</package>

